[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob_Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/loop.wav" type="AudioStream" id=5]
[ext_resource path="res://art/game_over.wav" type="AudioStream" id=6]
[ext_resource path="res://Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Mob_Level2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Mob_Level3.tscn" type="PackedScene" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -40, -40, 0, 0, 0, 0, 520, -40, 0, 0, 0, 0, 520, 760, 0, 0, 0, 0, -40, 760, 0, 0, 0, 0, -40, -40 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
mob_level1_scene = ExtResource( 2 )
mob_level2_scene = ExtResource( 8 )
mob_level3_scene = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 240, 360 )
current = true
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2500.0
margin_top = -2500.0
margin_right = 2020.0
margin_bottom = 1780.0
color = Color( 0.0784314, 0.290196, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -40, -40 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -120, 73 )
speed = 100.0

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 400 )
__meta__ = {
"_gizmo_extents_": 22.4
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
